# onuw-with-ai

./: .gitignore  Cargo.toml  README.md
onuw-agent/: Cargo.toml
onuw-agent/src/: agent.rs  interface.rs  lib.rs  roles.rs
onuw-agent/src/interface/: error.rs  request.rs  response.rs
onuw-agent/src/tests/: mod.rs
onuw-game/: Cargo.toml
onuw-game/src/: game.rs  lib.rs  playerinterface.rs  role.rs
onuw-game/src/game/: gamerror.rs  nightaction.rs  options.rs  time.rs  voteaction.rs
onuw-game/src/playerinterface/: error.rs  message.rs  roletarget.rs
onuw-game/src/role/: roles.rs  roletype.rs
onuw-game/src/role/roles/: common.rs  doppelganger.rs  drunk.rs  hunter.rs  insomniac.rs  mason.rs  minion.rs  mod.rs  robber.rs  seer.rs  tanner.rs  troublemaker.rs  villager.rs  werewolf.rs
onuw-game/src/tests/: mod.rs  testplayer.rs
onuw-with-ai-app/: .env  Cargo.toml  tailwind.config.js
onuw-with-ai-app/src/: app.rs  fileserv.rs  lib.rs  main.rs
onuw-with-ai-app/src/app/: components.rs  error.rs  home.rs  util.rs
onuw-with-ai-app/src/app/components/: startgame.rs
onuw-with-ai-app/src/app/pages/: error.rs  home.rs
onuw-with-ai-app/src/app/util/: roleimg.rs
onuw-with-ai-app/style/: tailwind.css
