[workspace]
members = ["onuw-with-ai-app", "onuw-game", "onuw-agent"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.74"
async-recursion = "1.0.5"
axum = "0.6.20"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
derivative = "2.2.0"
derive-getters = "0.3.0"
dyn-clone = "1.0.16"
fallible-iterator = "0.3.0"
futures = "0.3.29"
http = "1.0.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
leptos = "0.5.4"
leptos_axum = "0.5.4"
leptos_meta = "0.5.4"
leptos_router = "0.5.4"
rand = "0.8.5"
serde = "1.0.193"
thiserror = "1.0.50"
tokio = "1.34.0"
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
wasm-bindgen = "=0.2.87"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
