[package]
name = "onuw-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
derive-getters.workspace = true
dyn-clone.workspace = true
futures.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
