[package]
name = "onuw-game"
version = "0.1.0"
edition = "2021"

[features]
light = []

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
derive-getters.workspace = true
dyn-clone.workspace = true
futures.workspace = true
hashlink.workspace = true
itertools.workspace = true
once_cell.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
